// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t0] artifact created, level 1 reviewers run first then: snapshot [t0]: level 1 active, level 2 awaits 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: linter (l1, 1/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.linter.md
   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.linter.md
   │
   ├─ r2: spellcheck (l1, 1/3)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r002._.given.by_peer.spellcheck.md
   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r002._.taken.by_self.spellcheck.md
   │
   ├─ r3: architect (l2, 0/2)
   │   └─ awaits arrival
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (2 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: linter (l1, 1/2)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.given.by_peer.linter.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r001._.taken.by_self.linter.md
      │   ├─ r2: spellcheck (l1, 1/3)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r002._.given.by_peer.spellcheck.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i001.8739656801d5e77f22.r002._.taken.by_self.spellcheck.md
      │   └─ r3: architect (l2, 0/2)
      │       └─ awaits l1 terminal
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (2 > 0)
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t1] second attempt, linter uses more budget then: snapshot [t1]: linter 2/2 exhausted, spellcheck 2/3 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: linter (l1, 2/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.linter.md
   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.linter.md
   │
   ├─ r2: spellcheck (l1, 2/3)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r002._.given.by_peer.spellcheck.md
   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r002._.taken.by_self.spellcheck.md
   │
   ├─ r3: architect (l2, 0/2)
   │   └─ awaits arrival
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (2 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: linter (l1, 2/2)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.linter.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.linter.md
      │   ├─ r2: spellcheck (l1, 2/3)
      │   │   ├─ rejected [TIME]
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r002._.given.by_peer.spellcheck.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r002._.taken.by_self.spellcheck.md
      │   └─ r3: architect (l2, 0/2)
      │       └─ awaits l1 terminal
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (2 > 0)
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t2] third attempt, spellcheck passes (linter already exhausted) then: snapshot [t2]: level 1 terminal, architect unlocked 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: linter (l1, 2/2)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.linter.md
   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.linter.md
   │
   ├─ r2: spellcheck (l1, 3/3)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.spellcheck.md
   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.spellcheck.md
   │
   ├─ r3: architect (l2, 1/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r003._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r003._.taken.by_self.architect.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: linter (l1, 2/2)
      │   │   ├─ exhausted 🌙, cached
      │   │   ├─ terminal — does not block higher levels
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.linter.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.linter.md
      │   ├─ r2: spellcheck (l1, 3/3)
      │   │   ├─ approved [TIME]
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.spellcheck.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.spellcheck.md
      │   └─ r3: architect (l2, 1/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r003._.given.by_peer.architect.md
      │       └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r003._.taken.by_self.architect.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)

🪷 the path continues
   ├─ l1 is terminal (exhausted 🌙) — it no longer blocks you
   ├─ l2 has engaged — address its blockers, then:
   │  └─ rhx route.stone.set --stone 1.vision --as arrived
   └─ a human is only needed once every level is terminal
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t3.5] fifth attempt, architect exhausted (review SKIPPED) then: snapshot [t3.5]: architect exhausted 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: linter (l1, 2/2)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.linter.md
   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.linter.md
   │
   ├─ r2: spellcheck (l1, 3/3)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.spellcheck.md
   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.spellcheck.md
   │
   ├─ r3: architect (l2, 2/2)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i004.6dddc53e1de2efc1da.r003._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.vision._.review.i004.6dddc53e1de2efc1da.r003._.taken.by_self.architect.md
   │
   └─ halted: peer reviewer budget exhausted

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: linter, architect
   ├─ options
   │  ├─ increase budget
   │  │  └─ rhx route.guard.budget --for review --add N --stone 1.vision
   │  └─ approve as-is
   │     └─ rhx route.stone.set --stone 1.vision --as approved
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      └─ reviews
          ├─ r1: linter (l1, 2/2)
          │   ├─ exhausted 🌙, cached
          │   ├─ terminal — does not block higher levels
          │   ├─ 1 blocker 🔴
          │   ├─ 0 nitpicks ✓
          │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.linter.md
          │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.linter.md
          ├─ r2: spellcheck (l1, 3/3)
          │   ├─ approved, cached
          │   ├─ 0 blockers ✓
          │   ├─ 0 nitpicks ✓
          │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.spellcheck.md
          │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.spellcheck.md
          └─ r3: architect (l2, 2/2)
              ├─ exhausted 🌙, cached
              ├─ terminal — does not block higher levels
              ├─ 1 blocker 🔴
              ├─ 0 nitpicks ✓
              ├─ given: .reviews/peer/1.vision._.review.i004.6dddc53e1de2efc1da.r003._.given.by_peer.architect.md
              └─ taken: .reviews/peer/1.vision._.review.i004.6dddc53e1de2efc1da.r003._.taken.by_self.architect.md
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t3] fourth attempt, architect at budget limit then: snapshot [t3]: architect rejected at limit 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: linter (l1, 2/2)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.linter.md
   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.linter.md
   │
   ├─ r2: spellcheck (l1, 3/3)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.spellcheck.md
   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.spellcheck.md
   │
   ├─ r3: architect (l2, 2/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i004.6dddc53e1de2efc1da.r003._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.vision._.review.i004.6dddc53e1de2efc1da.r003._.taken.by_self.architect.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   ├─ r1: linter (l1, 2/2)
      │   │   ├─ exhausted 🌙, cached
      │   │   ├─ terminal — does not block higher levels
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.linter.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.linter.md
      │   ├─ r2: spellcheck (l1, 3/3)
      │   │   ├─ approved, cached
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.spellcheck.md
      │   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.spellcheck.md
      │   └─ r3: architect (l2, 2/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: .reviews/peer/1.vision._.review.i004.6dddc53e1de2efc1da.r003._.given.by_peer.architect.md
      │       └─ taken: .reviews/peer/1.vision._.review.i004.6dddc53e1de2efc1da.r003._.taken.by_self.architect.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)

🪷 the path continues
   ├─ l1 is terminal (exhausted 🌙) — it no longer blocks you
   ├─ l2 has engaged — address its blockers, then:
   │  └─ rhx route.stone.set --stone 1.vision --as arrived
   └─ a human is only needed once every level is terminal
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t4] route.drive shows exhaustion status then: snapshot [t4]: drive status with exhaustion 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  └─ stone = 1.vision
   │
   └─ halted, peer reviewer budget exhausted
      ├─ reason: peer reviewer budget exhausted
      │
      ├─ reviews
      │   ├─ r1: linter (l1, 2/2)
      │   │   ├─ exhausted 🌙
      │   │   ├─ terminal — does not block higher levels
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: [TEMP]/.reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.linter.md
      │   │   └─ taken: [TEMP]/.reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.linter.md
      │   ├─ r2: spellcheck (l1, 3/3)
      │   │   ├─ approved
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: [TEMP]/.reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.spellcheck.md
      │   │   └─ taken: [TEMP]/.reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.spellcheck.md
      │   └─ r3: architect (l2, 2/2)
      │       ├─ exhausted 🌙
      │       ├─ terminal — does not block higher levels
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       ├─ given: [TEMP]/.reviews/peer/1.vision._.review.i004.6dddc53e1de2efc1da.r003._.given.by_peer.architect.md
      │       └─ taken: [TEMP]/.reviews/peer/1.vision._.review.i004.6dddc53e1de2efc1da.r003._.taken.by_self.architect.md
      │
      ├─ please ask a human to either
      │  ├─ approve as-is
      │  │  └─ rhx route.stone.set --stone 1.vision --as approved
      │  │
      │  └─ extend budget (then rerun)
      │     └─ rhx route.guard.budget --for review --add N --stone 1.vision
      │
      └─ once they approve, run
         └─ rhx route.stone.set --stone 1.vision --as passed
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t5] extend budget for architect then: snapshot [t5]: budget extended 1`] = `
"
🦉 budget extended

🗿 route.guard.budget
   ├─ route = .
   ├─ add = 2
   ├─ peer = architect
   └─ updates
      └─ architect: 2 → 4

"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t6] after budget extension, architect can continue then: snapshot [t6]: architect can continue 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  └─ stone = 1.vision
   │
   └─ reviews
      ├─ r1: linter (l1, 2/2)
      │   ├─ exhausted 🌙
      │   ├─ terminal — does not block higher levels
      │   ├─ 1 blocker 🔴
      │   ├─ 0 nitpicks ✓
      │   ├─ given: [TEMP]/.reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.linter.md
      │   └─ taken: [TEMP]/.reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.linter.md
      ├─ r2: spellcheck (l1, 3/3)
      │   ├─ approved
      │   ├─ 0 blockers ✓
      │   ├─ 0 nitpicks ✓
      │   ├─ given: [TEMP]/.reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.spellcheck.md
      │   └─ taken: [TEMP]/.reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.spellcheck.md
      └─ r3: architect (l2, 2/4)
          ├─ rejected
          ├─ 1 blocker 🔴
          ├─ 0 nitpicks ✓
          ├─ given: [TEMP]/.reviews/peer/1.vision._.review.i004.6dddc53e1de2efc1da.r003._.given.by_peer.architect.md
          └─ taken: [TEMP]/.reviews/peer/1.vision._.review.i004.6dddc53e1de2efc1da.r003._.taken.by_self.architect.md

🪷 the path continues
   ├─ l1 is terminal (exhausted 🌙) — it no longer blocks you
   ├─ l2 has engaged — address its blockers, then:
   │  └─ rhx route.stone.set --stone 1.vision --as arrived
   └─ a human is only needed once every level is terminal
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t7] make architect pass then: snapshot [t7]: architect approved, linter still exhausted 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: linter (l1, 2/2)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.linter.md
   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.linter.md
   │
   ├─ r2: spellcheck (l1, 3/3)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.spellcheck.md
   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.spellcheck.md
   │
   ├─ r3: architect (l2, 3/4)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i005.0997a4c5910ffe05d0.r003._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.vision._.review.i005.0997a4c5910ffe05d0.r003._.taken.by_self.architect.md
   │
   └─ halted: peer reviewer budget exhausted

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: linter
   ├─ options
   │  ├─ increase budget
   │  │  └─ rhx route.guard.budget --for review --add N --peer linter --stone 1.vision
   │  └─ approve as-is
   │     └─ rhx route.stone.set --stone 1.vision --as approved
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      └─ reviews
          ├─ r1: linter (l1, 2/2)
          │   ├─ exhausted 🌙, cached
          │   ├─ terminal — does not block higher levels
          │   ├─ 1 blocker 🔴
          │   ├─ 0 nitpicks ✓
          │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.linter.md
          │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.linter.md
          ├─ r2: spellcheck (l1, 3/3)
          │   ├─ approved, cached
          │   ├─ 0 blockers ✓
          │   ├─ 0 nitpicks ✓
          │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.spellcheck.md
          │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.spellcheck.md
          └─ r3: architect (l2, 3/4)
              ├─ approved [TIME]
              ├─ 0 blockers ✓
              ├─ 0 nitpicks ✓
              ├─ given: .reviews/peer/1.vision._.review.i005.0997a4c5910ffe05d0.r003._.given.by_peer.architect.md
              └─ taken: .reviews/peer/1.vision._.review.i005.0997a4c5910ffe05d0.r003._.taken.by_self.architect.md
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t8] route.drive shows need for human approval then: snapshot [t8]: needs approval for exhaustion 1`] = `
"🦉 where were we?

🗿 route.drive
   ├─ where do we go?
   │  ├─ route = .
   │  └─ stone = 1.vision
   │
   └─ halted, peer reviewer budget exhausted
      ├─ reason: peer reviewer budget exhausted
      │
      ├─ reviews
      │   ├─ r1: linter (l1, 2/2)
      │   │   ├─ exhausted 🌙
      │   │   ├─ terminal — does not block higher levels
      │   │   ├─ 1 blocker 🔴
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: [TEMP]/.reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.linter.md
      │   │   └─ taken: [TEMP]/.reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.linter.md
      │   ├─ r2: spellcheck (l1, 3/3)
      │   │   ├─ approved
      │   │   ├─ 0 blockers ✓
      │   │   ├─ 0 nitpicks ✓
      │   │   ├─ given: [TEMP]/.reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.spellcheck.md
      │   │   └─ taken: [TEMP]/.reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.spellcheck.md
      │   └─ r3: architect (l2, 3/4)
      │       ├─ approved
      │       ├─ 0 blockers ✓
      │       ├─ 0 nitpicks ✓
      │       ├─ given: [TEMP]/.reviews/peer/1.vision._.review.i005.0997a4c5910ffe05d0.r003._.given.by_peer.architect.md
      │       └─ taken: [TEMP]/.reviews/peer/1.vision._.review.i005.0997a4c5910ffe05d0.r003._.taken.by_self.architect.md
      │
      ├─ please ask a human to either
      │  ├─ approve as-is
      │  │  └─ rhx route.stone.set --stone 1.vision --as approved
      │  │
      │  └─ extend budget (then rerun)
      │     └─ rhx route.guard.budget --for review --add N --peer linter --stone 1.vision
      │
      └─ once they approve, run
         └─ rhx route.stone.set --stone 1.vision --as passed
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t9] human approves then: snapshot [t9]: approved 1`] = `
"🦉 the way speaks for itself

🗿 route.stone.set
   ├─ stone = 1.vision
   └─ ✓ approved
"
`;

exports[`driver.route.peer-budget-multilevel.journey.acceptance given: [journey 4] multi-level mixed terminal + budget extension when: [t10] pass after human approval then: snapshot [t10]: journey complete 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: linter (l1, 2/2)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.linter.md
   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.linter.md
   │
   ├─ r2: spellcheck (l1, 3/3)
   │   ├─ exhausted 🌙, cached
   │   ├─ terminal — does not block higher levels
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.spellcheck.md
   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.spellcheck.md
   │
   ├─ r3: architect (l2, 3/4)
   │   ├─ approved, cached
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   ├─ given: .reviews/peer/1.vision._.review.i005.0997a4c5910ffe05d0.r003._.given.by_peer.architect.md
   │   └─ taken: .reviews/peer/1.vision._.review.i005.0997a4c5910ffe05d0.r003._.taken.by_self.architect.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.vision
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   ├─ r1: linter (l1, 2/2)
   │  │   │   ├─ exhausted 🌙, cached
   │  │   │   ├─ terminal — does not block higher levels
   │  │   │   ├─ 1 blocker 🔴
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   ├─ given: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.given.by_peer.linter.md
   │  │   │   └─ taken: .reviews/peer/1.vision._.review.i002.dfc5faff83ea2fcb55.r001._.taken.by_self.linter.md
   │  │   ├─ r2: spellcheck (l1, 3/3)
   │  │   │   ├─ approved, cached
   │  │   │   ├─ 0 blockers ✓
   │  │   │   ├─ 0 nitpicks ✓
   │  │   │   ├─ given: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.given.by_peer.spellcheck.md
   │  │   │   └─ taken: .reviews/peer/1.vision._.review.i003.457fd5ef46e053a35e.r002._.taken.by_self.spellcheck.md
   │  │   └─ r3: architect (l2, 3/4)
   │  │       ├─ approved, cached
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       ├─ given: .reviews/peer/1.vision._.review.i005.0997a4c5910ffe05d0.r003._.given.by_peer.architect.md
   │  │       └─ taken: .reviews/peer/1.vision._.review.i005.0997a4c5910ffe05d0.r003._.taken.by_self.architect.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
